PLT-222 Pipeline Security fix (#27)